Moved index.html to root

--- a/index.html
+++ b/index.html
@@ -87,26 +87,26 @@ document.addEventListener("DOMContentLoaded", function () {
 
 
 document.addEventListener("DOMContentLoaded", function () {
-        const form = document.getElementById("contactForm");
-        form.addEventListener("submit", function (e) {
-            e.preventDefault(); // Prevent default form submission
+    const form = document.getElementById("contactForm");
+    form.addEventListener("submit", function (e) {
+        e.preventDefault(); // Prevent default form submission
 
-            const formData = new FormData(form);
+        const formData = new FormData(form);
 
-            fetch("send_mail.php", {
-                method: "POST",
-                body: formData,
+        fetch("../Rohaanconstr/send_mail.php", {
+            method: "POST",
+            body: formData,
+        })
+            .then(response => response.text())
+            .then(result => {
+                document.getElementById("formMessage").innerHTML = `<p style="color: green;">${result}</p>`;
+                form.reset(); // Clear the form
             })
-                .then((response) => response.text())
-                .then((result) => {
-                    document.getElementById("formMessage").innerHTML = `<p style="color: green;">${result}</p>`;
-                    form.reset(); // Clear the form
-                })
-                .catch((error) => {
-                    document.getElementById("formMessage").innerHTML = `<p style="color: red;">Error: Could not send your message.</p>`;
-                });
-        });
+            .catch(error => {
+                document.getElementById("formMessage").innerHTML = `<p style="color: red;">Error: Could not send your message.</p>`;
+            });
     });
+});
 
 </script>
 
@@ -317,14 +317,12 @@ document.addEventListener("DOMContentLoaded", function () {
         <div class="form-container">
             <h2>Talk to an Expert</h2>
             <div class="message" id="formMessage"></div>
-            <form action="send_mail.php" method="post">
-
+            <form id="contactForm">
                 <input type="text" placeholder="Your Name" name="name" required>
                 <input type="email" placeholder="Your Email" name="email" required>
                 <input type="text" placeholder="Your Phone" name="phone" required>
                 <button type="submit">Submit</button>
             </form>
-            
         </div>
     </div>
 
