--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ document.addEventListener("DOMContentLoaded", function () {
                                 Property</a>
                             <div class="dropdown-menu m-0">
                                 <a href="feature.html1" class="dropdown-item">Rohaan Phoenix</a>
-                                <a href="cars.html1" class="dropdown-item">Rohaan Ashoka</a>
+                                <a href="Ashoka.html" class="dropdown-item">Rohaan Ashoka</a>
                                 <a href="team.html1" class="dropdown-item">Rohaan Cypress</a>
                                 <a href="testimonial.html1" class="dropdown-item">Villa</a>
 
