Moved index.html to root

--- a/Ashoka.html
+++ b/Ashoka.html
@@ -212,7 +212,7 @@
     <section class="banner">
         <div class="banner-content">
 
-            <h1 class="banner-title">Rohan <span class="text-primary">Ashoka </span></h1>
+            <h1 class="banner-title"><span class="rohaan">Rohaan</span> <span class="text-primary">Ashoka </span></h1>
             <p class="banner-description">
                 Rohan Ashoka is a residential apartment complex located in Perumbakkam, Chennai. It is a well-designed
                 complex. The apartments are spacious and well-ventilated, and the complex is located in a quiet and
