Moved index.html to root

--- a/Ashoka.html
+++ b/Ashoka.html
@@ -332,9 +332,9 @@
                     <p>Madipakkam</p>
                     <ul>
                         <li>🏠 25 Units</li>
-                        <li>↔ 1008 - 1224 Sq.ft</li>
+                        <li>📏 1008 - 1224 Sq.ft</li>
                         <li>🛏️ 2/2.5/3 BHK</li>
-                        <li>🎉 5 Amenities</li>
+                        <li>🏊‍♂️ 5 Amenities</li>
                     </ul>
                 </div>
             </div>
@@ -346,9 +346,9 @@
                     <p>Madipakkam</p>
                     <ul>
                         <li>🏠 25 Units</li>
-                        <li>↔ 1008 - 1224 Sq.ft</li>
+                        <li>📏 1008 - 1224 Sq.ft</li>
                         <li>🛏️ 2/2.5/3 BHK</li>
-                        <li>🎉 5 Amenities</li>
+                        <li>🏊‍♂️ 5 Amenities</li>
                     </ul>
                 </div>
             </div>
@@ -359,9 +359,9 @@
                     <p>Madipakkam</p>
                     <ul>
                         <li>🏠 25 Units</li>
-                        <li>↔ 1008 - 1224 Sq.ft</li>
+                        <li>📏 1008 - 1224 Sq.ft</li>
                         <li>🛏️ 2/2.5/3 BHK</li>
-                        <li>🎉 5 Amenities</li>
+                        <li>🏊‍♂️ 5 Amenities</li>
                     </ul>
                 </div>
             </div>
