--- a/Ashoka.html
+++ b/Ashoka.html
@@ -150,6 +150,14 @@
 
     <!-- Navbar & Hero Start -->
     <div class="container-fluid nav-bar sticky-top px-0 px-lg-4 py-2 py-lg-0">
+        <div class="contact-icons">
+            <a href="tel:9003198331" class="phone-icon">
+                <span class="rotated-text"> 9003198331</span> <i class="ph-icon fas fa-phone-alt"></i>
+            </a>
+            <a href="https://wa.me/9003198331" target="_blank" class="whatsapp-icon">
+                <img src="img/what-icom.png" alt="WhatsApp Icon">
+            </a>
+        </div>
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a href="" class="navbar-brand p-0">
