--- a/Ashoka.html
+++ b/Ashoka.html
@@ -365,7 +365,7 @@
             <div class="project-card">
                 <img src="img/Front-View-min.jpg" alt="Project Image" class="project-image" />
                 <div class="project-details">
-                    <h3>Rohaan Cypress</h3>
+                    <h3 class="black">Rohaan Cypress</h3>
                     <p>Madipakkam</p>
                     <ul>
                         <li>🏠 25 Units</li>
@@ -379,7 +379,7 @@
             <div class="project-card">
                 <img src="img/Front-View-min.jpg" alt="Project Image" class="project-image" />
                 <div class="project-details">
-                    <h3>Rohaan Cypress</h3>
+                    <h3 class="black">Rohaan Cypress</h3>
                     <p>Madipakkam</p>
                     <ul>
                         <li>🏠 25 Units</li>
@@ -392,7 +392,7 @@
             <div class="project-card">
                 <img src="img/Front-View-min.jpg" alt="Project Image" class="project-image" />
                 <div class="project-details">
-                    <h3>Rohaan Cypress</h3>
+                    <h3 class="black">Rohaan Cypress</h3>
                     <p>Madipakkam</p>
                     <ul>
                         <li>🏠 25 Units</li>
