Moved index.html to root

--- a/Phoneix.html
+++ b/Phoneix.html
@@ -186,9 +186,9 @@
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Residential
                                 Property</a>
                             <div class="dropdown-menu m-0">
-                                <a href="Phoneix.html" class="dropdown-item">Rohaan Phoenix</a>
+                                <a href="feature.html1" class="dropdown-item">Rohaan Phoenix</a>
                                 <a href="cars.html1" class="dropdown-item">Rohaan Ashoka</a>
-                                <a href="Cypress.html" class="dropdown-item">Rohaan Cypress</a>
+                                <a href="team.html1" class="dropdown-item">Rohaan Cypress</a>
                                 <a href="testimonial.html1" class="dropdown-item">Villa</a>
 
                             </div>
@@ -220,9 +220,9 @@
     <section class="banner">
         <div class="banner-content">
 
-            <h1 class="banner-title"><span class="rohaan">Rohaan</span> <span class="text-primary">Ashoka </span></h1>
+            <h1 class="banner-title"><span class="rohaan">Rohaan</span> <span class="text-primary">Phoenix </span></h1>
             <p class="banner-description">
-                Rohan Ashoka is a residential apartment complex located in Perumbakkam, Chennai. It is a well-designed
+                Rohan Phoenix is a residential apartment complex located in Perumbakkam, Chennai. It is a well-designed
                 complex. The apartments are spacious and well-ventilated, and the complex is located in a quiet and
                 peaceful area. Rohan Ashoka is a great choice for families and professionals looking for a comfortable
                 and convenient place to live.
@@ -278,7 +278,7 @@
         <section class="unique-container">
     
             <p class="unique-content">
-                Rohaan Ashoka is a residential apartment complex located in Perumbakkam, Chennai. It is a well-designed complex. The apartments are spacious and well-ventilated, and the complex is located in a quiet and peaceful area. Rohaan Ashoka is a great choice for families and professionals looking for a comfortable and convenient place to live.
+                Rohaan Phoenix is a residential apartment complex located in Perumbakkam, Chennai. It is a well-designed complex. The apartments are spacious and well-ventilated, and the complex is located in a quiet and peaceful area. Rohaan Ashoka is a great choice for families and professionals looking for a comfortable and convenient place to live.
                 Looking for a modern, well-connected home in Chennai? Rohaan Ashoka in Medavakkam offers beautifully designed 2 BHK and 3 BHK apartments that blend comfort, convenience, and style.
                 Located in one of the city’s fastest-growing residential hubs, Rohaan Ashoka ensures seamless connectivity to key locations like Velachery, OMR, Sholinganallur, and Tambaram. With top schools, hospitals, IT parks, and shopping malls nearby, this is the perfect place for families and professionals.
             </p>
