--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@ document.addEventListener("DOMContentLoaded", function () {
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Residential
                                 Property</a>
                             <div class="dropdown-menu m-0">
-                                <a href="feature.html1" class="dropdown-item">Rohaan Phoenix</a>
+                                <a href="Phoneix.html" class="dropdown-item">Rohaan Phoenix</a>
                                 <a href="Ashoka.html" class="dropdown-item">Rohaan Ashoka</a>
-                                <a href="team.html1" class="dropdown-item">Rohaan Cypress</a>
+                                <a href="Cypress.html" class="dropdown-item">Rohaan Cypress</a>
                                 <a href="testimonial.html1" class="dropdown-item">Villa</a>
 
                             </div>
