Moved index.html to root

--- a/Cypress.html
+++ b/Cypress.html
@@ -238,11 +238,11 @@
             </div>
             <div class="property-info">
                 <div class="property-details-info">
-                    <p><i class="fas fa-building"></i> <strong>25 Units</strong></p>
-                    <p><i class="fas fa-ruler-combined"></i> <strong>1008 - 1224 Sq.ft</strong></p>
-                    <p><i class="fas fa-bed"></i> <strong>2/2.5/3 BHK</strong></p>
-                    <p><i class="fas fa-dumbbell"></i> <strong>5 Amenities</strong></p>
-                    <p><i class="fas fa-map-marker-alt"></i> <strong>Perumbakkam</strong></p>
+                    <p><i class="fas fa-building"></i> <strong>23 Units</strong></p>
+                    <p><i class="fas fa-ruler-combined"></i> <strong>887-1208 Sq.ft</strong></p>
+                    <p><i class="fas fa-bed"></i> <strong>2/3 BHK</strong></p>
+                    <p><i class="fas fa-dumbbell"></i> <strong>7 Amenities</strong></p>
+                    <p><i class="fas fa-map-marker-alt"></i> <strong>Madipakkam</strong></p>
                 </div>
                 <div class="cta-buttons">
                     <button class="download-brochure">Download E-brochure</button>
@@ -255,7 +255,7 @@
                     <p class="progress-title">Construction Update</p>
                     <div class="progress-bar">
                         <div class="progress-fill" style="width: 75%;">
-                            <span class="progress-percentage">75%</span>
+                            <span class="progress-percentage">100%</span>
                         </div>
                     </div>
                 </div>
@@ -278,9 +278,7 @@
         <section class="unique-container">
     
             <p class="unique-content">
-                Rohaan Cypress is a residential apartment complex located in Perumbakkam, Chennai. It is a well-designed complex. The apartments are spacious and well-ventilated, and the complex is located in a quiet and peaceful area. Rohaan Ashoka is a great choice for families and professionals looking for a comfortable and convenient place to live.
-                Looking for a modern, well-connected home in Chennai? Rohaan Ashoka in Medavakkam offers beautifully designed 2 BHK and 3 BHK apartments that blend comfort, convenience, and style.
-                Located in one of the city’s fastest-growing residential hubs, Rohaan Ashoka ensures seamless connectivity to key locations like Velachery, OMR, Sholinganallur, and Tambaram. With top schools, hospitals, IT parks, and shopping malls nearby, this is the perfect place for families and professionals.
+                Rohaan Cypress is a new residential project by Rohaan Constructions Pvt. Ltd. located in Madipakkam, Chennai. The project offers 1, 2, and 3 BHK apartments with a built-up area ranging from 598 to 1208 sq.ft. Rohaan Cypress is a well-connected location with easy access to major roads and highways. The project is also close to schools, hospitals, and other amenities.
             </p>
             <ul class="unique-features">
               <li>Spacious & Elegant Homes</li>
