--- a/Cypress.html
+++ b/Cypress.html
@@ -175,7 +175,7 @@
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Commercial
                                 Property</a>
                             <div class="dropdown-menu m-0">
-                                <a href="feature.html1" class="dropdown-item">Rohaan Walnut</a>
+                                <a href="walnut.html" class="dropdown-item">Rohaan Walnut</a>
                                 <a href="cars.html1" class="dropdown-item">Rohaan Redwood</a>
                                 <a href="team.html1" class="dropdown-item">Rohaan Acacia</a>
 
