Moved index.html to root

--- a/Phoneix.html
+++ b/Phoneix.html
@@ -172,10 +172,10 @@
                         <a href="index.html" class="nav-item nav-link active">Home</a>
 
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Commercial
+                            <a href="commercial-property.html" class="nav-link dropdown-toggle" >Commercial
                                 Property</a>
                             <div class="dropdown-menu m-0">
-                                <a href="feature.html1" class="dropdown-item">Rohaan Walnut</a>
+                                <a href="walnut.html" class="dropdown-item">Rohaan Walnut</a>
                                 <a href="cars.html1" class="dropdown-item">Rohaan Redwood</a>
                                 <a href="team.html1" class="dropdown-item">Rohaan Acacia</a>
 
@@ -186,8 +186,8 @@
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Residential
                                 Property</a>
                             <div class="dropdown-menu m-0">
-                                <a href="feature.html1" class="dropdown-item">Rohaan Phoenix</a>
-                                <a href="cars.html1" class="dropdown-item">Rohaan Ashoka</a>
+                                <a href="Phoneix.html" class="dropdown-item">Rohaan Phoenix</a>
+                                <a href="Ashoka.html" class="dropdown-item">Rohaan Ashoka</a>
                                 <a href="Cypress.html" class="dropdown-item">Rohaan Cypress</a>
                                 <a href="testimonial.html1" class="dropdown-item">Villa</a>
 
