--- a/walnut.html
+++ b/walnut.html
@@ -172,7 +172,7 @@
                         <a href="index.html" class="nav-item nav-link active">Home</a>
 
                         <div class="nav-item dropdown">
-                            <a href="commercial-property.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Commercial
+                            <a href="commercial-property.html" class="nav-link dropdown-toggle" >Commercial
                                 Property</a>
                             <div class="dropdown-menu m-0">
                                 <a href="walnut.html" class="dropdown-item">Rohaan Walnut</a>
