--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ document.addEventListener("DOMContentLoaded", function () {
                         </div>
                         <a href="service.html1" class="nav-item nav-link">Joint Venture</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Residential
+                            <a href="Resedential.html" class="nav-link dropdown-toggle" >Residential
                                 Property</a>
                             <div class="dropdown-menu m-0">
                                 <a href="Phoneix.html" class="dropdown-item">Rohaan Phoenix</a>
