Moved index.html to root

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@ document.addEventListener("DOMContentLoaded", function () {
                             <a href="commercial-property.html" class="nav-link dropdown-toggle">Commercial
                                 Property</a>
                             <div class="dropdown-menu m-0">
+                                <a href="crest.html" class="dropdown-item">Rohaan Crest</a>
                                 <a href="walnut.html" class="dropdown-item">Rohaan Walnut</a>
                                 <a href="cars.html1" class="dropdown-item">Rohaan Redwood</a>
                                 <a href="team.html1" class="dropdown-item">Rohaan Acacia</a>
